@@ -29,9 +29,9 @@ AC_INIT([libTMCG], [1.1.3])
 #   (Interfaces removed:    CURRENT++, AGE=0, REVISION=0)
 #   (Interfaces added:      CURRENT++, AGE++, REVISION=0)
 #   (No interfaces changed:                   REVISION++)
-LIBTMCG_LT_CURRENT=2
-LIBTMCG_LT_AGE=1
-LIBTMCG_LT_REVISION=3
+LIBTMCG_LT_CURRENT=3
+LIBTMCG_LT_AGE=3
+LIBTMCG_LT_REVISION=0
 
 # If API is changed in an incompatible way: increment the next counter.
 LIBTMCG_CONFIG_API_VERSION=2
