@@ -1,4 +1,4 @@
-@set UPDATED 30 July 2015
-@set UPDATED-MONTH July 2015
+@set UPDATED 24 December 2015
+@set UPDATED-MONTH December 2015
 @set EDITION 1.1.3
 @set VERSION 1.1.3
