@@ -35,7 +35,7 @@ t_mpz_SOURCES = test_helper.c test_helper.h t-mpz.cc
 t_vtmf_SOURCES = pipestream.hh test_helper.c test_helper.h t-vtmf.cc
 t_vsshe_SOURCES = pipestream.hh test_helper.c test_helper.h t-vsshe.cc
 t_vrhe_SOURCES = pipestream.hh test_helper.c test_helper.h t-vrhe.cc
-t_mpc_SOURCES = StiglicMPC.cc StiglicMPC.hh t-mpc.cc
+t_mpc_SOURCES = StiglicMPC.cc StiglicMPC.hh test_helper.c test_helper.h t-mpc.cc
 t_key_SOURCES = t-key.cc
 t_poker_SOURCES = pipestream.hh test_helper.c test_helper.h t-poker.cc
 t_poker_rot_SOURCES = pipestream.hh test_helper.c test_helper.h t-poker-rot.cc
